data/derived/comb/progs/unify/prog3685.ml.out
Characters 68-69:
  | _  -> l :: n mod 10 :: digitsOfInt( n / 10);;
          ^
Error: This expression has type 'a list
       but an expression was expected of type int
